--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 <div>
   <ul data-role="listview" data-theme="b" class="ui-listview ui-group-theme-a">
   <li class="ui-first-child ui-last-child">
-  <a href="index1.html" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+  <a href="#page1" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
   <h2>Datos del Movil</h2>
   </a>
   </li>
   <li class="ui-first-child ui-last-child">
-  <a href="index2.html" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-  <h2>Datos del Movil</h2>
+  <a href="#page2" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+  <h2>Swype con la pantalla</h2>
   </a>
   </li>
   <li class="ui-first-child ui-last-child">
-  <a href="#index3" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+  <a href="#page3" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
   <h2>Dispositivo Beepea y Vibra</h2>
   </a>
   </li>
@@ -44,7 +44,21 @@
       <h4>Oswaldo Perez Valiente</h4>
         <img src="res/android/mdpi.png" width="56" height="46">
     </div>
-  </div>
-
+</div>
+<div data-role="page" id="page1" data-theme="b">
+  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+    <iframe src="index1.html" style="width:100%;height:100vh;margin-bottom:-10vh;padding-bottom:-10vh;"></iframe>
+  </div> 
+</div>
+<div data-role="page" id="page2" data-theme="b">
+  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+    <iframe src="index2.html" style="width:100%;height:200vh;height: 100vh;"></iframe>
+  </div> 
+</div>
+<div data-role="page" id="page3" data-theme="b">
+  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+    <iframe src="index3.html" style="width:100%;height:200vh;height: 100vh;"></iframe>
+  </div> 
+</div>
  </body>
  </html>
