--- a/index1.html
+++ b/index1.html
@@ -4,14 +4,13 @@
 <meta charset="utf-8">
 <title>Datos del dispositivo</title>
 <!--Grupo CSS-->
-<link rel="stylesheet"href="css/app4.min.css"/>
-<link rel="stylesheet"href="css/jquery.mobile.icons-1.4.5.min.css"/>
-<link rel="stylesheet"href="css/jquery.mobile.structure-1.4.5.min.css"/>
-
+<link rel="stylesheet" href="css/app8.min.css">
+<link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css">
+<link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css">
 <!--grupo JavaScript-->
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
-<script src="js/acciones.js" type="text/javascript"></script>
+<script src="js/acciones1.js" type="text/javascript"></script>
 <script src="phonegap.js"></script><!--Necesario-->
 
 </head>
@@ -44,7 +43,7 @@
   </div>
   
   <div data-role="page" id="page2" data-theme="b">
-  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
+  <div data-role="header" data-add-back-btn="false" data-back-btn-text="Regresar" data-back-btn-theme="a">
     <h1>Dispositivo</h1>
   </div>
     <div data-role="main" class="ui-content">
@@ -84,7 +83,7 @@
  </div>  
  
  <div data-role="page" id="page3" data-theme="b">
-  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
+  <div data-role="header" data-add-back-btn="false" data-back-btn-text="Regresar" data-back-btn-theme="a">
     <h1>Eventos</h1>
   </div>
   <div data-role="main" class="ui-content">
