--- a/index2.html
+++ b/index2.html
@@ -2,104 +2,89 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Datos del dispositivo</title>
+<title>App8 Swipe con la Pantalla Deslizar</title>
 <!--Grupo CSS-->
-<link rel="stylesheet"href="css/app4.min.css"/>
-<link rel="stylesheet"href="css/jquery.mobile.icons-1.4.5.min.css"/>
-<link rel="stylesheet"href="css/jquery.mobile.structure-1.4.5.min.css"/>
-
+<link rel="stylesheet" href="css/app8.min.css">
+<link rel="stylesheet" href="css/jquery.mobile.icons-1.4.5.min.css">
+<link rel="stylesheet" href="css/jquery.mobile.structure-1.4.5.min.css">
 <!--grupo JavaScript-->
 <script src="js/jquery-1.11.2.min.js"></script>
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
-<script src="js/acciones.js" type="text/javascript"></script>
-<script src="phonegap.js"></script><!--Necesario-->
+<script src="js/acciones2.js" type="text/javascript"></script>
+<script src="phonegap.js"></script>
 
 </head>
 <body>
 <div data-role="page" id="Principal" data-theme="b">
-  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">  
-       <h1>Datos del Dispositivo</h1>
+  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
+  <h1>Aplicacion 8 Acciones</h1>
+</div>
+<div data-role="main" class="ui-content">
+<div>
+  <ul data-role="listview" data-theme="b" class="ui-listview ui-group-theme-a">
+  <li class="ui-first-child ui-last-child">
+  <a href="#page3" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+  <h2>Acciones</h2>
+  </a>
+  </li>
+ </ul>
+</div>
+</div>
+<div data-role="footer" align="center" data-theme="b" data-position="fixed">
+      <h4>Oswaldo Perez Valiente</h4>
+        <img src="res/android/mdpi.png" width="56" height="46">
     </div>
-  <div data-role="main" class="ui-content">
-  <div>
-    <ul data-role="listview" data-theme="b" class="ui-listview ui-group-theme-a">
-    <li class="ui-first-child ui-last-child">
-    <a href="#page2" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-    <h2>Dispositivo</h2>
-    </a>
-    </li>
-    <li class="ui-first-child ui-last-child">
-    <a href="#page3" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-    <h2>Eventos</h2>
+  </div>
+<div data-role="page" id="page3" data-theme="b">
+  <div data-role="header" data-add-back-btn="false" data-back-btn-text="Regresar" data-back-btn-theme="a">
+    <h1>Acciones</h1>
+   </div>
+<div data-role="main" class="ui-content">
+<div>
+  <ul data-role="controlgroup" data-type="vertical" data-theme="b" class="ui-listview ui-group-theme-a">
+  <li class="ui-first-child ui-last-child">
+  <a href="#page4" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+  <h2>Izquierda</h2>
+  </a>
+  </li>
+  <li class="ui-first-child ui-last-child">
+    <a href="#page5" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
+    <h2>Derecha</h2>
     </a>
     </li>
    </ul>
   </div>
  </div>
- 
- <div data-role="footer" align="center" data-theme="b" data-position="fixed">
-    <h4>Oswaldo Perez Valiente</h4>
-    <img src="res/android/mdpi.png" width="56" height="46">
-  </div>
-  </div>
-  
-  <div data-role="page" id="page2" data-theme="b">
-  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
-    <h1>Dispositivo</h1>
-  </div>
-    <div data-role="main" class="ui-content">
-      <div id="disp">
-  <table width="200" border="1" id="datos">
-    <tr>
-      <td width="83">Datos</td>
-      <td width="101">Dispositivo</td>
-    </tr>
-    <tr>
-      <td>Nombre</td>
-      <td>&nbsp;</td>
-    </tr>
-     <tr>
-      <td>Phonegap</td>
-      <td>&nbsp;</td>
-    </tr>
-     <tr>
-      <td>Plataforma</td>
-      <td>&nbsp;</td>
-    </tr>
-     <tr>
-      <td>Version</td>
-      <td>&nbsp;</td>
-    </tr>
-     <tr>
-      <td>UUID</td>
-      <td>&nbsp;</td>
-    </tr>
-  </table>
-  </div>
-  </div>
-  <div data-role="footer" align="center" data-theme="b" data-position="fixed">
-    <h4>Oswaldo Perez Valiente</h4>
-    <img src="res/android/mdpi.png" width="56" height="46">
-  </div>
- </div>  
- 
- <div data-role="page" id="page3" data-theme="b">
-  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
-    <h1>Eventos</h1>
-  </div>
-  <div data-role="main" class="ui-content">
-  <div>
-    <h2>Historia</h2>
-    <ul id="eHistoria">
-    </ul>
-    </div>
-    </div>
-     <div data-role="footer" align="center" data-theme="b" data-position="fixed">
-    <h4>Oswaldo Perez Valiente</h4>
-    <img src="res/android/mdpi.png" width="56" height="46">
-  </div>
- </div> 
+<div data-role="footer" align="center" data-theme="b" data-position="fixed">
+      <h4>Oswaldo Perez Valiente</h4>
+        <img src="res/android/mdpi.png" width="56" height="46">
+   </div>
+ </div>
+<div data-role="page" id="page4" data-theme="b">
+<div data-role="header" data-add-back-btn="false" data-back-btn-text="Regresar" data-back-btn-theme="b">
+<h1>Desliza a la Izquierda</h1>
 </div>
-</body>
-</html>
-  
+<div data-role="content" align="center">
+<div id="izquierda" style="width:40%;height:400px;background-color:#9CF;">
+</div>
+</div>
+<div data-role="footer" align="center" data-theme="b" data-position="fixed">
+      <h4>Oswaldo Perez Valiente</h4>
+        <img src="res/android/mdpi.png" width="56" height="46">
+   </div>
+ </div>
+<div data-role="page" id="page5" data-theme="b">
+<div data-role="header" data-add-back-btn="false" data-back-btn-text="Regresar" data-back-btn-theme="b">
+<h1>Desliza a la Derecha</h1>
+</div>
+<div data-role="content" align="center">
+<div id="derecha" style="width:40%;height:400px;background-color:#0F3;">
+</div>
+</div>
+<div data-role="footer" align="center" data-theme="b" data-position="fixed">
+      <h4>Oswaldo Perez Valiente</h4>
+        <img src="res/android/mdpi.png" width="56" height="46">
+   </div>
+ </div>
+ </body>
+ </html>
