--- a/index3.html
+++ b/index3.html
@@ -7,11 +7,11 @@
 
 <!--Grupo CSS-->
 <link href="css/jquery.mobile.structure-1.3.2.min.css" rel="stylesheet">
-<link href="css/jquery.mobile-1.3.2.min.css" rel="stylesheet">
+<link href="css/app8.min.css" rel="stylesheet">
 <!--grupo JavaScript-->
 <script src="js/jquery-1.9.1.min.js"></script>
 <script src="js/jquery.mobile-1.3.2.min.js"></script>
-<script src="js/acciones.js"></script>
+<script src="js/acciones3.js"></script>
 <script src="phonegap.js"></script>
 </head>
 
